# systematic_macro_2026_alpha_research

./: .bazelrc  .gitignore  BUILD.bazel  CMakeLists.txt  Dockerfile  README.md  STRATEGIES.md  WORKSPACE  docker-compose.yml  pyproject.toml  run.bat  run.sh
.github/workflows/: ci.yml
.ruff_cache/0.15.9/: 3914835474572787932  9268329504464013897  9552641185326349071
cmake/: alpha_research-config.cmake.in
notebooks/: research.ipynb
scripts/: runner.py
src/cpp/: BUILD.bazel  bindings.cpp  math_utils.hpp  pdrrm_engine.hpp  portfolio_optimizer.hpp  signal_demo.cpp  strategies_engine.hpp
src/python/: BUILD.bazel
src/python/alpha_research/: BUILD.bazel  __init__.py  backtest.py  data.py  signals.py
tests/cpp/: BUILD.bazel  test_engines.cpp
tests/python/: BUILD.bazel  test_pipeline.py
